# public/swagger.json
@@ -3038,7 +3038,7 @@
                                                     "updated_at": "2026-05-22T00:00:00+00:00"
                                                 },
                                                 "created_at": "2026-05-22T00:00:00+00:00",
-                                                "company_role": "company_owner"
+                                                "company_role": "owner"
                                             },
                                             "people": [
                                                 {
@@ -3181,7 +3181,7 @@
                                                         "updated_at": "2026-05-22T00:00:00+00:00"
                                                     },
                                                     "created_at": "2026-05-22T00:00:00+00:00",
-                                                    "company_role": "company_owner"
+                                                    "company_role": "owner"
                                                 },
                                                 "people": [
                                                     {
@@ -3371,7 +3371,7 @@
                                                     "updated_at": "2026-05-22T00:00:00+00:00"
                                                 },
                                                 "created_at": "2026-05-22T00:00:00+00:00",
-                                                "company_role": "company_owner"
+                                                "company_role": "owner"
                                             },
                                             "people": [
                                                 {
@@ -3512,7 +3512,7 @@
                                                     "updated_at": "2026-05-22T00:00:00+00:00"
                                                 },
                                                 "created_at": "2026-05-22T00:00:00+00:00",
-                                                "company_role": "company_owner"
+                                                "company_role": "owner"
                                             },
                                             "people": [
                                                 {
@@ -5097,7 +5097,7 @@
                     },
                     "company_role": {
                         "type": "string",
-                        "example": "company_owner"
+                        "example": "owner"
                     }
                 }
             },
@@ -5251,7 +5251,7 @@
                     "company_role": {
                         "type": "string",
                         "enum": [
-                            "company_owner",
+                            "owner",
                             "admin",
                             "recruiter",
                             "candidate"
@@ -5292,7 +5292,7 @@
                     "company_role": {
                         "type": "string",
                         "enum": [
-                            "company_owner",
+                            "owner",
                             "admin",
                             "recruiter",
                             "candidate"
